--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,132 @@
-.phone{
-    object-fit: contain;
-    width: 100%;
-    height: 100%;
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Raleway:wght@100;200;300&display=swap");
+
+body {
+  font-family: "Raleway", sans-serif;
 }
 
-
-.phone_col{
-    height:200px
+.phone {
+  object-fit: contain;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
 }
 
-ul{
-    list-style: none;
+.phone_col {
+  height: 200px;
 }
 
+ul {
+  list-style: none;
+}
 
-.single_product_row{
-    border:1px solid black;
-    border-radius: 5px;
-    margin:10px;
-    padding:10px
-  }
+.single_product_row {
+  border: 1px solid black;
+  border-radius: 5px;
+  margin: 10px;
+  padding: 10px;
+}
+
+.product_heading {
+  text-align: center;
+  font-family: "Raleway", sans-serif;
+  color: rgb(121, 152, 180);
+}
+.home {
+  color: black;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+}
+
+.phoneimg {
+  object-fit: contain;
+  width: 100%;
+  height: 400px;
+  border-radius: 20px;
+  padding: 50px;
+
+  transition: transform 0.2s;
+
+  margin: 0 auto;
+  cursor: pointer;
+}
+
+.phoneimg:hover {
+  transform: scale(
+    1.05
+  ); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
+
+h3,
+h2 {
+  font-weight: bold;
+  text-decoration: underline;
+  font-family: "Raleway", sans-serif;
+  padding: auto;
+}
+
+.row_design {
+  border: 20px;
+}
+
+.cost {
+  font-size: 25px;
+  background-color: #f5f5f5;
+  font-family: "Raleway", sans-serif;
+}
+
+.phone_diffent_images {
+  list-style: none;
+  height: 50vh;
+  overflow: scroll;
+  width: 209px;
+}
+
+h3 {
+  cursor: pointer;
+}
+
+.handyphone {
+  object-fit: contain;
+  width: 100%;
+  height: 400px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+.single_product_row2 {
+  border-radius: 5px;
+  margin: 10px;
+  padding: 10px;
+  background-color: aliceblue;
+}
+
+.handyphone:hover {
+  transform: scale(1.05);
+}
+
+.cartbtn {
+  background-color: orange;
+
+  height: 50px;
+  margin-left: 10p;
+  padding: 0 18px 0 18px;
+
+  color: #f5f5f5;
+  font-weight: bolder;
+}
+
+.cartbtn2 {
+  background-color: #FB641B;
+
+  height: 50px;
+  margin-left: 10px;
+  padding: 0px 42px 0 30px;
+  color: #f5f5f5;
+  font-weight: bolder;
+
+
+}
+.fa-solid{
+  margin-left: 10px;
+}
