--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 
 body {
   font-family: "Raleway", sans-serif;
+  color: black;
 }
 
 .phone {
@@ -9,6 +10,12 @@ body {
   width: 100%;
   height: 100%;
   cursor: pointer;
+}
+.phone:hover{
+  transform: scale(
+    1.05
+  );
+
 }
 
 .phone_col {
@@ -20,10 +27,11 @@ ul {
 }
 
 .single_product_row {
-  border: 1px solid black;
+
   border-radius: 5px;
   margin: 10px;
   padding: 10px;
+  background-color: #f1f1f1;
 }
 
 .product_heading {
@@ -77,7 +85,7 @@ h2 {
 
 .phone_diffent_images {
   list-style: none;
-  height: 50vh;
+  height: 60vh;
   overflow: scroll;
   width: 209px;
 }
@@ -117,16 +125,27 @@ h3 {
 }
 
 .cartbtn2 {
-  background-color: #FB641B;
+  background-color: #fb641b;
 
   height: 50px;
   margin-left: 10px;
   padding: 0px 42px 0 30px;
   color: #f5f5f5;
   font-weight: bolder;
-
-
 }
-.fa-solid{
+.fa-solid {
   margin-left: 10px;
+}
+
+.feature_list {
+  list-style: circle;
+}
+
+
+.single_product_row3 {
+
+  border-radius: 15px;
+  margin: 10px;
+  padding: 10px;
+  background-color: #f1f1f1;
 }
